--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,7 @@
             <artifactId>kinetica-jdbc</artifactId>
             <classifier>jar-with-dependencies</classifier>
             <version>${kinetica-jdbc.version}</version>
+            <scope>runtime</scope>
         </dependency>
 
         <!-- HikariCP -->
@@ -116,22 +117,6 @@
                 <configuration>
                     <source>17</source>
                     <target>17</target>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>2.6</version>
-                <configuration>
-                    <archive>
-                        <index>true</index>
-                        <manifest>
-                            <addClasspath>true</addClasspath>
-                            <addExtensions>false</addExtensions>
-                        </manifest>
-                    </archive>
-                    <finalName>${project.name}</finalName>
-                    <forceCreation>true</forceCreation>
                 </configuration>
             </plugin>
             <plugin>
